# subxtxt

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust-checks.yml
src/: connection.rs  key_pair.rs  lib.rs
src/pallets/: author.rs  balances.rs  contract.rs  multisig.rs  session.rs  staking.rs  system.rs  utility.rs  vesting.rs
subxtxt/: Cargo.toml  Makefile
subxtxt/src/: connection.rs  lib.rs
subxtxt/src/pallets/: author.rs  balances.rs  contract.rs  mod.rs  multisig.rs  transaction_payment.rs  treasury.rs
subxtxt/tests/: aleph-basic-interaction.rs
subxtxt/tests/docker/: Dockerfile  docker_entrypoint.sh
subxtxt/tests/utils/: aleph_image.rs  mod.rs
use-pallet/: Cargo.toml
use-pallet/src/: codegen.rs  ir.rs  lib.rs
