[workspace]

members = [
    "subxtxt",
    "use-pallet",
]

[workspace.package]
version = "0.0.0"
authors = ["Cardinal"]
edition = "2021"
homepage = "https://alephzero.org"
keywords = ["blockchain", "substrate", "polkadot", "subxt"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Cardinal-Cryptography/subxtxt"

[workspace.dependencies]
anyhow = { version = "1.0.71" }
async-trait = { version = "0.1.71" }
parity-scale-codec = { version = "3.0.0" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
log = { version = "0.4" }
serde = { version = "1.0" }
serde_json = { version = "1.0.94" }
subxt = { version = "0.25.0" }
syn = { version = "2" }

subxtxt = { version = "0.0.0", path = "subxtxt" }
subxtxt-use-pallet = { version = "0.0.0", path = "use-pallet" }
