[package]
name = "subxtxt"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

description = "Convenient extensions to `subxt` library"
documentation = "https://docs.rs/subxtxt"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subxt = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
